feature : 이름이 비어있거나 공백일 경우 에러 발생 코드 추가, 중복된 이름이 있을경우 에러 발생 코드 추가